# Optimisation_VRP

./: .gitignore  .~lock.DataProjet_1.csv#  DataProjet_1.xlsx  DataProjet_2.xlsx  README.md  config.yml  run.sh
src/: CMakeLists.txt  CPLEX_implem.cpp  blend.cpp  config.cpp  config.h  exact_solver.cpp  exact_solver.h  heuristic.cpp  heuristic.h  modelisation.cpp  plot_graph.cpp  tabou_search.cpp  tabou_search.h  test.cpp  vrp.cpp  vrp.h
tab1/: cleaner.py  coordinates_cleaned.csv  distance.csv  vehicule_cleaned.csv
tab10/: demand.csv  distance.csv  vehicule_cleaned.csv  vehicules.csv
tab13/: vehicules.csv
tab14/: demand.csv
tab15/: distance.csv  vehicule_cleaned.csv
tab16/: vehicules.csv
tab17/: demand.csv
tab2/: coordinates_cleaned.csv  distance.csv  new_cleaner.py
tab4/: demand.csv  vehicules.csv
tab5/: demand.csv  distance.csv
tab7/: demand.csv
tab8/: demand.csv
tables/: cleaner.py
tables/tab1/: cleaner.py  coordinates.csv  coordinates_cleaned.csv  demand.csv  distance.csv  old_cleaner.py  vehicule_cleaned.csv
tables/tab10/: demand.csv  distance.csv
tables/tab11/: demand.csv  distance.csv  vehicules.csv
tables/tab12/: demand.csv  distance.csv  new_cleaner.py
tables/tab13/: demand.csv  distance.csv
tables/tab14/: demand.csv  distance.csv  vehicule_cleaned.csv  vehicules.csv
tables/tab15/: demand.csv  distance.csv  vehicule_cleaned.csv  vehicules.csv
tables/tab16/: demand.csv  distance.csv  vehicule_cleaned.csv  vehicules.csv
tables/tab17/: demand.csv  distance.csv  vehicule_cleaned.csv  vehicules.csv
tables/tab2/: coordinates.csv  demand.csv  distance.csv
tables/tab3/: demand.csv  distance.csv  vehicule_cleaned.csv
tables/tab4/: distance.csv  vehicules.csv
tables/tab5/: demand.csv  distance.csv
tables/tab6/: demand.csv  distance.csv
tables/tab7/: demand.csv  distance.csv
tables/tab8/: cleaner.py  demand.csv  distance.csv  vehicules.csv
tables/tab9/: demand.csv  distance.csv
